<resources>
    <string name="app_name">Space Farming</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="responsavel">Responsavel</string>
    <string name="nivel">Nivel</string>
    <string name="data">Data</string>
    <string name="telefone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="nitrogenio">Nitrogenio</string>
    <string name="confirmar">Confirmar</string>
    <string name="preco">Preço</string>
    <string name="cancelar">Cancelar</string>
    <string name="nivel_atual">Nivel Atual</string>
    <string name="medir_nivel">Medir Nivel</string>
    <string name="abastecer">Abastecer</string>
    <string name="historico_do_botij_o">Historico do Botijão</string>
    <string name="regua">Regua</string>
    <string name="endereco">Endereço</string>
    <string name="ex_nivel">Nivel Anteriro: 20 Nivel Atual: 20</string>
    <string name="desc_botijao">Botijao</string>
    <string name="identificacao_do_botijao">Identificação do Botijão</string>
    <string name="capacidade_de_nitrogenio_em_litros">Capacidade de nitrogênio em litros</string>
    <string name="qtd_canecas">Quantidade de Canecas:</string>
    <string name="qtd_racks">Quantidade de racks por caneca:</string>
    <string name="qtd_palhetas">Quantidade de palhetas por rack:</string>
    <string name="ex_idBotijao">Botijão 0</string>
    <string name="controle_de_nitrogenio">Controle de nitrogenio</string>
    <string name="abastecimento">Abastecimento</string>

    <string name="nome2">Nome:</string>
    <string name="ex_nome_responsavel">Diogo jose da silva Ribeiro</string>
    <string name="telefone2">Telefone:</string>
    <string name="ex_telefone_responsavel">0000000000</string>
    <string name="ex_data">20/01/2020</string>
    <string name="ex_email">responsavel@hotmail.com</string>
    <string name="email2">E-mail:</string>
    <string name="nivel2">Nível Anterior:</string>

    <string name="data2">Data:</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="endereco1">Endereço:</string>
    <string name="precoLitro">Preço Litro:</string>
    <string name="ex_precoLitro">10.0</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="botij_es">Botijões</string>
    <string name="historicos">Historicos</string>
    <string name="titulo_lista">Lista de Botijões</string>
    <string name="ex_nivel1">0.0</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sair">Sair</string>
    <string-array name="spiner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>